# atheneum

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  doxygen.cfg  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  clang-format-check.yml  doxygen-completeness-check.yml
cmake/: build-options-interface.cmake  compile-flags.cmake  generate-doxygen-config.cmake  git-versioning.cmake  initialize-submodules.cmake
doc/: guidelines.md  style.md
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx-source/: conf.py  docs.rst  guidelines.rst  index.rst
include/atheneum/: atheneum.h  logging-base.h
src/: CMakeLists.txt  atheneum-private.h  atheneum.cpp  doxygen.cfg  logging-base.cpp  logging-base.h
test/: CMakeLists.txt  atheneum_tests.cpp
