[tool.poetry]
name = "sphinx-docs"
version = "1.0.0"
description = ""
authors = ["Atheneum"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
sphinx = "7.2.6"
breathe = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
